--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
-header{
-    display: flex;
-    justify-content: space-around;
 
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:rgb(222, 192, 250);
+    padding: 0 20px;
+    line-height: 50px;
+  }
+.nav-item{
+    font-family: 'Raleway', serif;
+    color:rgb(70, 69, 67);
+   
+ } 
+a{
+  text-decoration: none;   
 }
 .photo{
     border-radius: 50px;
 }
 .name{
-    color:rgb(171, 109, 230);
+    color:rgb(222, 192, 250);
     font-family: 'Raleway', sans-serif;
 }
 
@@ -17,13 +29,34 @@ main{
   margin: 10%;
 
 }
+.main-container{
+    display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 70%;
+  font-family: 'Raleway', sans-serif;
+  background-color: ghostwhite;
+  padding: 20px;
+}
+.font{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.link{
+    color: darkslateblue;
+}
+.code{
+    font-style:oblique;
+}
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0%;
   }
 .container{
 display:flex;
 justify-content: space-around;
-align-items: baseline;
+align-items:center ;
 }
