--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0 20px;
     line-height: 50px;
   }
-.nav-item{
+.nav-link{
     font-family: 'Raleway', serif;
     color:rgb(70, 69, 67);
    
